[workspace]
resolver = "2"

members = [
    "ex_liquidity_pool",
    "ex_token",
    "rpciege",
    "hello-soroban"
]

[workspace.dependencies]
soroban-sdk = "20.0.0-rc2.2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true